methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: value Yellow is not a member of object java.awt.Color
  faireV(Color.Yellow)
               ^