methods.picture.MethodsPicture.scala.code
override def run() {
  faireV(Color.Yellow)
}

def dessine(){
  baisseBrosse()
  leveBrosse()
}

def faireV(c:Color){
  setCouleurBrosse(c)
  avance()
  dessine()
  avance()
  left()
  avance()
  dessine()
  droite()
  avance()
  droite()
  avance()
  dessine()
  left()
  avance(2)
  
}